--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-tactile
+
+domain: wbrazelton.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://wbrazelton.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+baseurl: /docs      # place folder name if the site is served in a subfolder
