--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-alldata
+# Environment files
+environment*
+
+# Compiled site
+_site/
+
+# Projects
+alldata/
+!alldata/index.html
+
+# Jekyll build process
+.jekyll-cache
+.jekyll-metadata
+.sass-cache
+
+# Other files
+.DS_Store
+.tweet-cache
