--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  wbrazelton
 # Build settings
 encoding: utf-8
 markdown: kramdown
-#permalink: /:categories/:title/
+permalink: /:categories/:title/
 future: true
 sass:
   sass_dir: css
