playing with projects

--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ projects:
 #  - Brazelton-Lab/seq-annot
 #  - Brazelton-Lab/seq-qc
 #  - Brazelton-Lab/McGonigle-BSF-Metagenome-2021
-  - Brazelton-Lab/McGonigle-2019-LCY
+#  - Brazelton-Lab/McGonigle-2019-LCY
 #  - Brazelton-Lab/Atlantis-Massif-2015
   - Brazelton-Lab/Thornton_2020
 #  - Brazelton-Lab/oak
