playing with projects

--- a/_config.yml
+++ b/_config.yml
@@ -37,13 +37,13 @@ sass:
 projects:
 #  - Brazelton-Lab/lab_scripts
 #  - Brazelton-Lab/bio_utils
-#  - Brazelton-Lab/protocols    
+  - Brazelton-Lab/protocols    
 #  - Brazelton-Lab/seq-annot
 #  - Brazelton-Lab/seq-qc
 #  - Brazelton-Lab/McGonigle-BSF-Metagenome-2021
 #  - Brazelton-Lab/McGonigle-2019-LCY
 #  - Brazelton-Lab/Atlantis-Massif-2015
-  - Brazelton-Lab/Thornton_2020
+#  - Brazelton-Lab/Thornton_2020
 #  - Brazelton-Lab/oak
 #  - Brazelton-Lab/Dangerfield-2017
       
