--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ environment*
 _site/
 
 # Projects
-projects/
-!projects/index.html
-!projects/protocols/index.md
+#projects/
+#!projects/index.html
+#!projects/protocols/index.md
 
 # Jekyll build process
 .jekyll-cache
