--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 # Environment files
 environment*
 
-# locally built site
-_site/
-
-# Projects
-#projects/
-#!projects/index.html
-#!projects/protocols/index.md
+# original images
+/images/originals/*
 
 # Jekyll build process
 .jekyll-cache
@@ -15,7 +10,6 @@ _site/
 .sass-cache
 
 # Other files
-.DS_Store
 .tweet-cache
 node_modules
 .DS_Store
